tests/neg-inline-trait/disallow-inline-universal-trait.scala
inline trait Foo extends Any // error
